# PyTfsClient

./: .gitignore  LICENSE.txt  Makefile  README.md  ___setup.cfg  index.md  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: tests.yaml
lib/: tfs_client.py  tfs_client_factory.py  tfs_project_client.py  tfs_project_model.py  tfs_wiql_model.py  tfs_workitem_client.py  tfs_workitem_model.py
src/: main.py
src/pytfsclient/: client_connection.py  client_factory.py  http_client.py  tfs_client.py  tfs_client_factory.py  tfs_project_client.py  tfs_project_model.py  tfs_wiql_model.py  tfs_workitem_client.py  tfs_workitem_model.py  tfs_workitem_relation_model.py
src/pytfsclient/models/: client_error.py  deprecated.py  obsolete.py
src/pytfsclient/models/board/: tfs_board.py  tfs_board_column.py  tfs_board_column_state.py  tfs_board_column_type.py  tfs_board_row.py
src/pytfsclient/models/project/: tfs_identity.py  tfs_project.py  tfs_team.py  tfs_team_member.py
src/pytfsclient/models/workitems/: tfs_update_relations_result.py  tfs_wiql_result.py  tfs_workitem.py  tfs_workitem_changes.py  tfs_workitem_relation.py
src/pytfsclient/services/: base_client.py  client_connection.py  client_factory.py
src/pytfsclient/services/helpers/: batch_iterable.py
src/pytfsclient/services/http/: http_client.py
src/pytfsclient/services/mention_client/: mention_client.py
test/: __init__.py  context.py  test_backward_compatibility.py  test_client_connection.py  test_http_client_auth.py  test_http_client_basic.py  test_integration.py  test_nonpublic.py
(+2 files in other folders)
